--- a/municipalities/baras.html
+++ b/municipalities/baras.html
@@ -626,7 +626,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">RIZAL EATS</h1>
+            <img src="RIZAL EATS LOGO.png" alt="Rizal Eats" class="header-logo">
             <nav>
                 <ul class="nav-links">
                     <li><a href="../index.html">Home</a></li>
