--- a/login.html
+++ b/login.html
@@ -74,6 +74,7 @@
             text-align: center;
             border-radius: 40px;
             justify-content: center;
+            color: #fff;
         }
         
         .login-btn:hover {
