--- a/municipalities.html
+++ b/municipalities.html
@@ -146,12 +146,14 @@
             margin-bottom: 15px;
         }
 
+        /* Navigation hover animation */
         .nav-links li a {
             position: relative;
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
+        /* Underline animation for all nav links, including login */
         .nav-links li a::after {
             content: '';
             position: absolute;
@@ -167,10 +169,25 @@
             width: 100%;
         }
 
-        .nav-links li a:hover {
-            color: #ffb80e;
+        /* Ensure login button has no background and uses same hover animation */
+        .nav-links li.login-item a.login-btn {
+            background-color: transparent !important; /* Remove any background */
+            transition: color 0.3s ease; /* Match transition */
         }
 
+        .nav-links li.login-item a.login-btn:hover {
+            background-color: transparent !important; /* No yellow background */
+            color: #ffb80e; /* Optional: Change text color on hover to match theme */
+        }
+
+        /* Ensure no default browser styles interfere */
+        .nav-links li.login-item a.login-btn:focus,
+        .nav-links li.login-item a.login-btn:active {
+            background-color: transparent !important;
+            outline: none; /* Remove any focus outline if needed */
+        }
+
+        /* Existing styles for icons */
         .nav-links li a i {
             margin-right: 8px;
             font-size: 1rem;
@@ -181,7 +198,6 @@
             display: flex;
             align-items: center;
         }
-
         .header-logo {
             animation: bounceIn 1s ease-out;
         }
