--- a/municipalities/angono.html
+++ b/municipalities/angono.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angono Restaurants | RIZAL EATS</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Leaflet CSS -->
@@ -301,11 +301,11 @@
         .breadcrumb {
             padding: 1rem 0;
             font-size: 0.9rem;
-            color: var(--gray);
+            color: #ffb80e;
         }
         
         .breadcrumb a {
-            color: var(--primary);
+            color: #813531	;
             text-decoration: none;
         }
         
@@ -602,12 +602,34 @@
                 justify-content: center;
             }
         }
+        .header-logo {
+            animation: bounceIn 1s ease-out;
+        }
+
+        /* Define bounceIn animation */
+        @keyframes bounceIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.3);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1.2);
+            }
+            70% {
+                transform: scale(0.9);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">RIZAL EATS</h1>
+            <img src="RIZAL EATS LOGO.png" alt="Rizal Eats" class="header-logo">
             <nav>
                 <ul class="nav-links">
                     <li><a href="../index.html">Home</a></li>
