--- a/municipalities/cardona.html
+++ b/municipalities/cardona.html
@@ -626,12 +626,34 @@
                 margin-bottom: 0.5rem;
             }
         }
+        .header-logo {
+            animation: bounceIn 1s ease-out;
+        }
+
+        /* Define bounceIn animation */
+        @keyframes bounceIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.3);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1.2);
+            }
+            70% {
+                transform: scale(0.9);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">RIZAL EATS</h1>
+            <img src="RIZAL EATS LOGO.png" alt="Rizal Eats" class="header-logo">
             <nav>
                 <ul class="nav-links">
                     <li><a href="../index.html">Home</a></li>
