--- a/municipalities/antipolo.html
+++ b/municipalities/antipolo.html
@@ -602,6 +602,28 @@
                 justify-content: center;
             }
         }
+        .header-logo {
+            animation: bounceIn 1s ease-out;
+        }
+
+        /* Define bounceIn animation */
+        @keyframes bounceIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.3);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1.2);
+            }
+            70% {
+                transform: scale(0.9);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 <body>
@@ -617,7 +639,7 @@
                     <li class="login-item">
                         <a href="#" id="auth-btn" class="login-btn">
                             <i class="fas fa-user"></i> 
-                            <span id="auth-text">Login</span>
+                            <span id="auth-text">Log In</span>
                         </a>
                     </li>
                 </ul>
