--- a/municipalities/angono.html
+++ b/municipalities/angono.html
@@ -484,6 +484,7 @@
         .weather-temp {
             font-size: 2rem;
             font-weight: bold;
+            color: #ffb80e	;
         }
 
         .weather-meta {
@@ -499,10 +500,12 @@
 
         .weather-forecast {
             margin-top: 1.5rem;
+            #ffb80e	
         }
 
         .weather-forecast h4 {
             margin-bottom: 1rem;
+            color: #813531	;
         }
 
         .forecast-day {
@@ -515,6 +518,9 @@
         .forecast-date {
             min-width: 100px;
             font-weight: 500;
+            color: #813531	;
+
+
         }
 
         .forecast-icon img {
