--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
 
         <section class="why-rizal-eats-unique">
             <div class="why-rizal-eats-unique-content">
-                <h2>Discover Rizal’s Food Culture</h2>
-                <p>Embark on a culinary journey through Rizal with Rizal Eats. Uncover authentic dishes, explore local eateries, and savor the flavors that define the province’s vibrant heritage. Your next favorite meal is just a click away!</p>
+                <h2>Elevate Your Taste. Experience Rizal.</h2>
+                <p>Embark on a culinary journey through Rizal – Cradle of Philippine Art with Rizal Eats. Your next favorite dish is just a click away!</p>
                 <a href="municipalities.html" class="why-rizal-eats-unique-btn">Explore Now</a>
             </div>
         </section>
