--- a/dashboard.html
+++ b/dashboard.html
@@ -93,13 +93,17 @@
         }
 
         .welcome-message h2 {
-            margin: 0;
-            font-size: 2.5rem;
-            font-weight: 700;
-            background: linear-gradient(45deg, #ff611d, #ffb80e);
-            -webkit-text-fill-color: transparent;
-            animation: fadeIn 1s ease-out;
-            word-wrap: break-word;
+            text-align: left;
+            margin: 0.25rem 0;
+            background: linear-gradient(45deg, #e32929, #ffb80e	);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+            animation: welcomeFade 1.5s ease-out 0.2s;
+            animation-fill-mode: backwards;
+            font-size: 3.5rem;
+            font-weight: 400;
         }
         
         .welcome-message p {
@@ -693,7 +697,7 @@
                     <div class="avatar" id="user-avatar"></div>
                     <div class="welcome-content">
                         <h2>Welcome, <span id="user-email"></span></h2>
-                        <p>Explore the best eats in Rizal!</p>
+                        <p>Your Rizal adventure starts here!</p>
                         <span class="badge">Foodie Explorer</span>
                         <div class="user-stats">
                             <span><i class="fas fa-bookmark"></i> <span id="saved-count">0</span> Saved</span>
@@ -1133,14 +1137,14 @@
 
                 displayReviewsPage(currentReviewPage);
 
-                showToast('Review deleted successfully');
+                showToast('Review deleted successfully.');
 
                 await updateRestaurantRating(restaurantId);
 
             } catch (error) {
                 console.error("Error deleting review:", error);
                 if (error.code === 'permission-denied') {
-                    showToast('You do not have permission to delete this review', true);
+                    showToast('You do not have permission to delete this review.', true);
                 } else {
                     showToast('Error deleting review: ' + error.message, true);
                 }
@@ -1199,7 +1203,7 @@
 
                     closeEditModal();
 
-                    showToast('Review updated successfully');
+                    showToast('Review updated successfully.');
 
                     await updateRestaurantRating(restaurantId);
 
