tuldok na naman

--- a/dashboard.html
+++ b/dashboard.html
@@ -696,7 +696,7 @@
                 <div class="welcome-message">
                     <div class="avatar" id="user-avatar"></div>
                     <div class="welcome-content">
-                        <h2>Welcome, <span id="user-email"></span></h2>
+                        <h2>Welcome, <span id="user-email"></span>!</h2>
                         <p>Your Rizal adventure starts here!</p>
                         <span class="badge">Foodie Explorer</span>
                         <div class="user-stats">
