--- a/dashboard.html
+++ b/dashboard.html
@@ -104,6 +104,7 @@
             animation-fill-mode: backwards;
             font-size: 3.5rem;
             font-weight: 400;
+            text-transform: uppercase;
         }
         
         .welcome-message p {
